# MoyoDB

./: .editorconfig  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.benchmark/: README.md  policy.json  suites.json
.benchmark/comparison/: comparison.json  summary.md
.benchmark/current/: baseline.json  browser-report.md  summary.md
.benchmark/smoke/: baseline.json  browser-report.md  summary.md
.config/moyo/: README.md
.config/moyo/ci/: actionlint.yml  codeql-config.yml  dependency-review-config.yml  run-actionlint.mjs
.config/moyo/formatters/: biome.jsonc  prettier.json  prettierignore  taplo.toml
.config/moyo/lints/: dependency-cruiser.cjs  eslint.config.mjs  knip.json  ls-lint.yml  oxlint.json  (+4 more)
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  paranoid-quality.yml
crates/engine/: Cargo.toml
crates/engine/benches/: btree.rs  commit.rs  recovery.rs  wal.rs
crates/engine/js/: opfs_shim.js
crates/engine/src/: bindings.rs  btree.rs  bytes.rs  catalog.rs  change_feed.rs  checksum.rs  engine.rs  error.rs  layout.rs  lib.rs  overflow.rs  page.rs  pager.rs  recovery.rs  snapshot.rs  time.rs  txn.rs  value.rs  wal.rs
crates/engine/src/storage/: backend.rs  memory.rs  mod.rs  opfs.rs
crates/engine/tests/: btree.rs  btree_edge_cases.rs  change_feed.rs  common.rs  crash_matrix.rs  layout.rs  memory_backend.rs  model_based.rs  proof_artifacts.rs  recovery.rs  snapshot.rs  storage_backend_edges.rs  transactions.rs  wal.rs
proofs/artifacts/: btree_traces.json  derived_constants.json  txn_serialization_traces.json  wal_recovery_traces.json
proofs/moyodb_proofs/: ExportArtifacts.lean  MoyoDbProofs.lean  lake-manifest.json  lakefile.lean
scripts/benchmark/: collect.mjs  compare.mjs  reporting.mjs
(+23 files in other folders)
